al header se le agrega width 100%, que en teoria debe hacer que ocupe odo el ancho de la pantalla y overflow hidden para resolver problemas de float, cambio de margin left en el wrapper de 23% a 20 em

--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,8 @@
     background: #1abc9c;
     color: white;
     font-size: 25px;
+    width: 100%;
+    overflow: hidden;
   }
 
   #body{
@@ -16,7 +18,7 @@
   padding-top: 50px;
   padding-bottom: 6em;
   margin-top: 2em;
-  margin-left: 23%;
+  margin-left: 20em;
  
   border: rgb(34, 153, 233) 5px solid;
   border-radius: 15%;
